resolve #26 Avatar wrapper overflow fix

--- a/assets/css/userSetting.css
+++ b/assets/css/userSetting.css
@@ -333,10 +333,12 @@
     left: 0;
     width: 100%;
     height: 100%;
+    overflow: hidden;
+    cursor: pointer;
     opacity: 0;
     border-radius: 50%;
     background-color: rgba(0, 0, 0, 0.4);
-    cursor: pointer;
+
     transition: opacity 0.2s ease;
 }
 
